2006-10-10  Greg Troxel  <gdt@ir.bbn.com>

	* firmware/include/Makefile.am: avoid nonportable use of $< (first
	prereq in GNU make, implied source for pattern rule in BSD make)
	used in a non-pattern rule.

2006-06-25  Eric Blossom  <eb@comsec.com>

	* firmware/include/fpga_regs_standard.h: doc fix to reflect current reality.

2006-06-10  Eric Blossom  <eb@comsec.com>

	* host/apps/usrper.cc: removed dead (#if 0'd) code, that's no longer applicable.

2006-05-11  Martin Dudok van Heel <nldudok1 at olifantasia dot com>
	Added synchronised multi_usrp support using a new fpga firmware build in a new toplevel usrp_multi.
	A few changes were needed in the mainline code, but they shouldn't affect anyone
	(No functionality changes in the existing code, just a few API additions)

	* firmware/include/fpga_regs_standard.v: added Master/slave control register FR_RX_MASTER_SLAVE
	* firmware/include/fpga_regs_common.h: added 32 bit counter support bmFR_MODE_RX_COUNTING_32BIT
	* firmware/include/generate_regs.py: added support for bitno and bm defines
	* firmware/include/fpga_regs_standard.h: added Master/slave control register FR_RX_MASTER_SLAVE
	* host/lib/usrp_basic.h: added _write_fpga_reg_masked
	* host/lib/usrp_basic.cc: added _write_fpga_reg_masked
	* host/lib/usrp_standard.h: added FPGA_MODE_COUNTING_32BIT
	* fpga/Makefile.extra: regenerated to add new usrp_multi files
	* fpga/rbf/rev4/multi_2rxhb_2tx.rbf: new (fpga firmware for synchronised multi_usrp support)
	* fpga/rbf/rev4/multi_4rx_0tx.rbf: new (fpga firmware for synchronised multi_usrp support)
	* fpga/rbf/Makefile.am: added commented out rev2/multi_2rxhb_2tx.rbf and	rev4/multi_2rxhb_2tx.rbf	
	* fpga/rbf/rev2/multi_2rxhb_2tx.rbf: new (fpga firmware for synchronised multi_usrp support)
	* fpga/rbf/rev2/multi_4rx_0tx.rbf: new (fpga firmware for synchronised multi_usrp support)
	* fpga/toplevel/usrp_std/usrp_std.v: split rx_buffer reset into dsp reset and reset_regs 