@@ -33,6 +33,9 @@
 #ifdef HAVE_BYTESWAP_H
 #include <byteswap.h>
 #else
+
+#warning Using non-portable code (likely wrong other than ILP32).
+
 static inline unsigned short int
 bswap_16 (unsigned short int x)
 {
@@ -40,7 +43,7 @@ bswap_16 (unsigned short int x)
 }
 
 static inline unsigned int
-bswap32 (unsigned int x)
+bswap_32 (unsigned int x)
 {
   return ((((x) & 0xff000000) >> 24) | (((x) & 0x00ff0000) >>  8) \
         | (((x) & 0x0000ff00) <<  8) | (((x) & 0x000000ff) << 24));
